[gd_scene load_steps=7 format=3 uid="uid://ca4bee8aroijk"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="2_8xaru"]
[ext_resource type="Texture2D" uid="uid://dxbvsld3sfkc0" path="res://icon.svg" id="2_bm7vx"]
[ext_resource type="PackedScene" uid="uid://beuror6hpgrq0" path="res://Scenes/Player/Yves Francois Skeleton.tscn" id="2_eyymb"]
[ext_resource type="PackedScene" uid="uid://ctmuygrl3apcm" path="res://Scenes/Weapons/knife.tscn" id="3_d8gpv"]
[ext_resource type="Texture2D" uid="uid://cg5rmabtyxyga" path="res://Assets/Sprites/Screenshot_207.png" id="5_7r81w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xs6um"]
radius = 31.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 14
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("2_8xaru")

[node name="PlayerSkeleton" parent="." instance=ExtResource("2_eyymb")]
scale = Vector2(0.2, 0.2)

[node name="EntitySprite" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_bm7vx")

[node name="EntityHitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xs6um")

[node name="Timers" type="Node" parent="."]

[node name="SecondaryTimer" type="Timer" parent="Timers"]

[node name="DodgeTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="ReloadTimer" type="Timer" parent="Timers"]

[node name="DodgeRecoverTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="ParkourTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="HangJumpTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="NotParkouringTimer" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="Weapon" type="Node2D" parent="."]

[node name="Knife" parent="Weapon" instance=ExtResource("3_d8gpv")]

[node name="Screenshot207" type="Sprite2D" parent="."]
visible = false
position = Vector2(7, -9)
texture = ExtResource("5_7r81w")

[connection signal="timeout" from="Timers/DodgeTimer" to="." method="_on_dodge_timer_timeout"]
[connection signal="timeout" from="Timers/DodgeRecoverTimer" to="." method="_on_dodge_recover_timer_timeout"]
[connection signal="timeout" from="Timers/ParkourTimer" to="." method="_on_parkour_timer_timeout"]
[connection signal="timeout" from="Timers/HangJumpTimer" to="." method="_on_hang_jump_timer_timeout"]
[connection signal="timeout" from="Timers/NotParkouringTimer" to="." method="_on_not_parkouring_timer_timeout"]
